<resources>
    <string name="app_name">my basketball</string>
    <string name="account_hint">请输入用户名</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="remember_passwd">记住密码</string>
    <string name="no_account">没有账号</string>
    <string name="login">登陆</string>
    <string name="other_login_way">其它登陆方式</string>
    <string name="sure">我已经阅读并同意条款和隐私协议</string>

    <string name="nav_wonder">精彩</string>
    <string name="nav_discovery">发现</string>
    <string name="nav_message">交流</string>
    <string name="nav_me">我的</string>


    <string name="super_star">今日\n明星</string>
    <string name="text_name">贾森·基德</string>
    <string name="text_null"></string>
    <string name="text_site">武汉市 江汉大学</string>
    <string name="text_time">4月24日</string>
    <string name="text_phone">iPhone6 Plus</string>
    <string name="test_shared_text">今天和几个小伙伴打球很开心</string>
    <string name="text_myname">我是易建联</string>
    <string name="text_myphone">小米 Note</string>
    <string name="test_diao">大家来看我屌不屌</string>


    <string-array name="nav_names">
        <item>条目一</item>
        <item>条目二</item>
        <item>条目三</item>
        <item>条目四</item>
    </string-array>

    <integer-array name="nav_drawables_unchecked">
        <item>@mipmap/nav_icon_wonder_normal</item>
        <item>@mipmap/nav_icon_discovery_normal</item>
        <item>@mipmap/nav_icon_message_normal</item>
        <item>@mipmap/nav_icon_me_normal</item>
    </integer-array>

    <integer-array name="nav_drawables_checked">
        <item>@mipmap/nav_icon_wonder_checked</item>
        <item>@mipmap/nav_icon_discovery_checked</item>
        <item>@mipmap/nav_icon_message_checked</item>
        <item>@mipmap/nav_icon_me_checked</item>
    </integer-array>
</resources>
