<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/user_card_bg">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#868686"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/super_star_tag_bg"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/super_star"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="14dp"
        android:paddingBottom="14dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/test_user_card_avatar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_name"
            android:textColor="@color/orange"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@mipmap/icon_location"
            android:drawablePadding="5dp"
            android:text="@string/text_site"
            android:textColor="#868686"
            android:textSize="11sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_time"
                android:textSize="11sp"
                android:textColor="#868686"
                android:drawableLeft="@mipmap/icon_time"
                android:drawablePadding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/text_phone"
                android:textSize="11sp"
                android:textColor="#868686"
                android:drawableLeft="@mipmap/icon_phone"
                android:drawablePadding="5dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>