<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_1"
    android:gravity="center"
    tools:context="com.hxzy.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/board_bg"
        android:orientation="vertical"
        android:padding="17dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@mipmap/ic_11"
            android:drawablePadding="11dp"
            android:hint="@string/account_hint"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/dark_text_color"
            android:textColorHint="@color/hint_text_color" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@mipmap/ic_5"
            android:drawablePadding="11dp"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/dark_text_color"
            android:textColorHint="@color/hint_text_color" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/checkbox_state_drawable"
                android:drawablePadding="6dp"
                android:text="@string/remember_passwd"
                android:textColor="@color/light_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/no_account"
                android:textColor="@color/light_text_color"
                    android:textSize="16sp" />


        </RelativeLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_btn"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/login"
            android:textColor="@color/white_text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="17dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/other_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/other_login_way"
                android:textColor="@color/white_text_color"
                android:textSize="11sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/other_login_tv"
                android:background="@color/white_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/other_login_tv"
                android:background="@color/white_color" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/qq" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/weixin" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/weibo" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>


