<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/delims_line_color"
            android:layout_above="@+id/nav_menu"/>
        <RadioGroup
            android:id="@+id/nav_menu"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_nav_bg_color"
            android:orientation="horizontal"
            android:weightSum="5">
            <RadioButton
                android:id="@+id/item_wonder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nav_wonder"
                android:textColor="@color/nav_item_text_color_normal"
                android:drawableTop="@drawable/selector_nav_icon_wonder"
                android:drawablePadding="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/item_discovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nav_discovery"
                android:textColor="@color/nav_item_text_color_normal"
                android:drawableTop="@drawable/selector_nav_icon_discovery"
                android:drawablePadding="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"/>
            <RadioButton
                android:id="@+id/item_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nav_message"
                android:textColor="@color/nav_item_text_color_normal"
                android:drawableTop="@drawable/selector_nav_icon_message"
                android:drawablePadding="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"/>
            <RadioButton
                android:id="@+id/item_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nav_me"
                android:textColor="@color/nav_item_text_color_normal"
                android:drawableTop="@drawable/selector_nav_icon_me"
                android:drawablePadding="4dp"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"/>

        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:id="@+id/nav_ball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/selector_nav_icon_ball"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="8dp"/>
</RelativeLayout>