<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#202020"
              android:paddingBottom="15dp"
              android:paddingTop="8dp"
              android:paddingLeft="15dp"
              android:orientation="horizontal">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/yijianlian"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_myname"
            android:textColor="@color/orange"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_site"
                android:textSize="11sp"
                android:textColor="#868686"
                android:drawableLeft="@mipmap/icon_location"
                android:drawablePadding="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_myphone"
                android:textSize="11sp"
                android:textColor="#868686"
                android:drawableLeft="@mipmap/icon_phone"
                android:drawablePadding="4dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="2min"
                    android:textSize="11sp"
                    android:textColor="#868686"
                    android:layout_alignParentRight="true"
                    android:drawableLeft="@mipmap/icon_time"
                    android:drawablePadding="4dp"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>